--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <my-component src="obj"></my-component>
+  <my-component src="obj" baseurl='http://localhost:8000/'></my-component>
 
 </body>
 </html>
